# rust-rxx

./: .gitignore  Cargo.toml
eigen-rxx/: .gitignore  Cargo.toml
eigen-rxx-build/: Cargo.toml
eigen-rxx-build/src/: lib.rs
eigen-rxx/src/: lib.rs
eigen/eigen-rxx/: Cargo.toml  README.md  build.rs
eigen/eigen-rxx-build/: Cargo.toml
eigen/eigen-rxx-build/include/: wrapper.hh
eigen/eigen-rxx-build/src/: lib.rs
eigen/eigen-rxx/src/: ffi.rs  lib.rs
eigen/eigen-rxx/staging/: Makefile  eigen_map.rs  expand.rs  ffi.rs.cc  ffi.rs.h  ffi0.rs
eigen/eigen-rxx/tmp/tpl/: ffi.cc  ffi.rs  gvars.py
rxx/: Cargo.toml  build.rs
rxx-build/src/: genc.rs  lib.rs
rxx/rxx/: Cargo.toml  build.rs
rxx/rxx-build/: Cargo.toml
rxx/rxx-build/csrc/: wrapper.cc
rxx/rxx-build/include/: wrapper.hh
rxx/rxx-build/src/: genc.rs  lib.rs
rxx/rxx-macro/: Cargo.toml
rxx/rxx-macro/examples/: run_genc.rs
rxx/rxx-macro/src/: common.rs  genc.rs  genrs.rs  lib.rs  main.rs
rxx/rxx-macro/tests/: test_genc.rs  test_genrs.rs
rxx/rxx/csrc/: test.cc  test.hh
rxx/rxx/src/: cxx_pointer.rs  cxx_vector.rs  genrs.rs  lib.rs  pointer.rs  shared_ptr.rs  unique_ptr.rs  weak_ptr.rs
rxx/src/: genrs.rs  lib.rs
sophus-rxx/: Cargo.toml
sophus-rxx-build/: Cargo.toml
sophus-rxx-build/include/: wrapper.hh
sophus-rxx-build/src/: lib.rs
sophus-rxx/src/: lib.rs
sophus/sophus-rxx/: .gitignore  Cargo.toml  build.rs
sophus/sophus-rxx-build/: Cargo.toml
sophus/sophus-rxx-build/src/: lib.rs
sophus/sophus-rxx/src/: lib.rs
sophus/sophus-rxx/tpl/: tmp.rs  wrapper.rs
tensorrt-rxx/: Cargo.toml  build.rs
tensorrt-rxx-build/: Cargo.toml
tensorrt-rxx-build/src/: lib.rs
tensorrt-rxx/src/: lib.rs
tensorrt-sys/: Cargo.toml  build.rs
tensorrt-sys/src/: lib.rs
tensorrt/tensorrt-rxx/: Cargo.toml  build.rs
tensorrt/tensorrt-rxx-build/: Cargo.toml
tensorrt/tensorrt-rxx-build/csrc/: wrapper.cc
tensorrt/tensorrt-rxx-build/include/: wrapper.hh
tensorrt/tensorrt-rxx-build/src/: lib.rs
tensorrt/tensorrt-rxx/data/: mnist.onnx
tensorrt/tensorrt-rxx/src/: common.rs  lib.rs  logger.rs  macro.rs  onnx_parser.rs  trt.rs  trt_macro.rs  wrapper.rs
tensorrt/tensorrt-rxx/tests/: test.rs
tensorrt/tensorrt-sys/: Cargo.toml  build.rs  conda_pkgs.txt  wrapper.h
tensorrt/tensorrt-sys/src/: lib.rs
