[workspace]
members = [
        "rxx/*",
        "eigen/*",
        "sophus/*",
        "tensorrt/*",
]

[workspace.dependencies]
rxx-build.path = "rxx/rxx-build"
rxx.path = "rxx/rxx"
eigen-rxx-build.path = "eigen/eigen-rxx-build"
eigen-rxx.path = "eigen/eigen-rxx"
sophus-rxx-build.path = "sophus/sophus-rxx-build"
sophus-rxx.path = "sophus/sophus-rxx"
tensorrt-sys.path = "tensorrt/tensorrt-sys"
tensorrt-rxx-build.path = "tensorrt/tensorrt-rxx-build"
tensorrt-rxx.path = "tensorrt/tensorrt-rxx"
