[workspace]
members = [
        "rxx/*",
        "eigen/*",
        "sophus/*",
        "tensorrt/*",
]

[workspace.dependencies]
rxx-macro.path = "rxx/rxx-macro"
rxx-build.path = "rxx/rxx-build"
rxx.path = "rxx/rxx"
eigen-rxx-build.path = "eigen/eigen-rxx-build"
eigen-rxx.path = "eigen/eigen-rxx"
sophus-rxx-build.path = "sophus/sophus-rxx-build"
sophus-rxx.path = "sophus/sophus-rxx"
tensorrt-sys.path = "tensorrt/tensorrt-sys"
tensorrt-rxx-build.path = "tensorrt/tensorrt-rxx-build"
tensorrt-rxx.path = "tensorrt/tensorrt-rxx"
cuda-rs.path = "../rust/cuda-rust/cuda-rs"
cudart-sys.path = "../rust/cuda-rust/cudart-sys"
cuda-sys.path = "../rust/cuda-rust/cuda-sys"
