[package]
name = "rxx-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["full", "extra-traits", "parsing", "printing"] }
strfmt = "0.2"
maplit = "1"

[dev-dependencies]
rxx-build.workspace = true
maplit = "1"

[[example]]
name = "run_genc"
