[package]
name = "tensorrt-rxx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
paste = "1"
rxx.workspace = true
rxx-macro.workspace = true
tensorrt-sys.workspace = true
cuda-rs.workspace = true
libc = "0.2"

[build-dependencies]
tensorrt-rxx-build.workspace = true
cc = "1.0"
anyhow = "1.0"

[dev-dependencies]
rstest = "0.15"